--- a/CoachTicketManagement/CoachTicketManagement/fManagement.resx
+++ b/CoachTicketManagement/CoachTicketManagement/fManagement.resx
@@ -60,4 +60,90 @@
   <metadata name="menuStripManagement.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="imageListSeat.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>235, 17</value>
+  </metadata>
+  <data name="imageListSeat.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAthEAAAJNU0Z0AUkBTAIBAQMB
+        AAFYAQABWAEAASgBAAEoAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAaADAAEoAwABAQEAAQgG
+        AAEZGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
+        kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
+        MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
+        mQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFmAgABzAGZAgACzAIAAcwB
+        /wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEzAQABmQEAATMBAAHMAQAB
+        MwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFmAgABMwFmATMBAAEzAmYB
+        AAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFmAQABMwKZAQABMwGZAcwB
+        AAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEAATMBzAH/AQABMwH/ATMB
+        AAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFmAQABZgEAAWYBAAGZAQAB
+        ZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFmATMBzAEAAWYBMwH/AQAC
+        ZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFmAQABZgKZAQABZgGZAcwB
+        AAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEAAWYB/wIAAWYB/wEzAQAB
+        ZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZAQABmQEAAZkBAAHMAQAB
+        mQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEzAQABmQEzAWYBAAGZAWYB
+        mQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/AQABmQHMAgABmQHMATMB
+        AAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEAAZkBzAFmAQABmQH/AZkB
+        AAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHMAQABzAEAAZkBMwIAAcwC
+        MwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFmATMBAAGZAmYBAAHMAWYB
+        mQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZAQABzAGZAcwBAAHMAZkB
+        /wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/ATMBAAGZAf8BZgEAAcwB
+        /wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHMATMCAAH/AjMBAAH/ATMB
+        ZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJmAQAB/wFmAZkBAAH/AWYB
+        zAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHMAQAB/wGZAf8BAAH/AcwC
+        AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
+        /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
+        AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/+oAAL/F/QB/w4AGv8OAAL/F/QB/zUAAfIbBwH/CwAc
+        9AH/CwABCBpxAXcB/zIAAfMCBxj/AfMCBwH/CQAD9BnyAvQB/wkAAfIBcQF3AZgXuwGdAnEB/zEAAfAB
+        BwH0BP8B9A/zAfQE/wHwAQcB9AkAAfMB9BryAfMC9AkAAZgBcQGdBLsQnQGYBLsBdwFxAfQxAAG8AQcD
+        /xQHAfIC/wHwAQcB9AkAAfMB9APyAfMT9APyAfMC9AkAAZ0BcQGYArsBdxNxAZ0CuwGdAXEB9DEAAbwB
+        BwL/AbwBBwHwEf8CBwH0Af8B8AEHAfQJAAHzAfQC8gHzAfQB8xHyAvQC8gHzAvQJAAGdAXEBmAG7AXcB
+        cQF3EZgCcQGdAbsBnQFxAfQxAAG8AQcC/wIHEv8B8wEHAfEB/wHwAQcB9AkAAfMB9ALyAvQT8gH0AfMB
+        8gHzAvQJAAGdAXEBmAG7AnESuwGdAXEBnQG7AZ0BcQH0MQABvAEHAv8CBxL/AfMBBwHwAf8B8AEHAfQJ
+        AAHzAfQC8gL0E/IB9AHzAfIB8wL0CQABnQFxAZgBuwJxErsBnQFxAZ0BuwGdAXEB9DEAAbwBBwL/AgcS
+        /wHzAQcB8AH/AfABBwH0CQAB8wH0AvIC9BPyAfQB8wHyAfMC9AkAAZ0BcQGYAbsCcRK7AZ0BcQGdAbsB
+        nQFxAfQxAAG8AQcC/wIHAfQR/wG8AQcB8gH/AfABBwH0CQAB8wH0AvIB8wH0EvIB8wH0AvIB8wL0CQAB
+        nQFxAZgBuwF3AXEBnRG7AXcBcQGdAbsBnQFxAfQxAAG8AQcC/wH0FQcC/wHwAQcB9AkAAfMB9APyFPQB
+        8wLyAfMC9AkAAZ0BcQGYAbsBnRRxAXcCuwGdAXEB9DEAAbwBBwT/AfIQvAHwAfQD/wHwAQcB9AkAAfMB
+        9AXyEfME8gHzAvQJAAGdAXEBmAO7AZ0RdwGdA7sBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC
+        9AkAAZ0BcQGYGbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYGbsBnQFxAfQx
+        AAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYGbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB
+        9BryAfMC9AkAAZ0BcQGYGbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYGbsB
+        nQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYCLsBnQF3BHEBdwGdCbsBnQFxAfQx
+        AAG8AQca/wHwAQcB9AkAAfMB9AjyAvMH8gH0CPIB8wL0CQABnQFxAZgGuwGYAXcJcQGdB7sBnQFxAfQx
+        AAG8AQca/wHwAQcB9AkAAfMB9AfyA/QB8wXyA/QB8wbyAfMC9AkAAZ0BcQGYBbsBnQxxAXcGuwGdAXEB
+        9DEAAbwBBxr/AfABBwH0CQAB8wH0B/IF9APyBfQG8gHzAvQJAAGdAXEBmAW7BXEBnQhxAXcFuwGdAXEB
+        9DEAAbwBBxr/AfABBwH0CQAB8wH0CPIF9AHzBPQB8wfyAfMC9AkAAZ0BcQGYBLsBdwRxAZ0BuwGYCHEF
+        uwGdAXEB9DEAAbwBBxr/AfABBwH0CQAB8wH0CfII9AnyAfMC9AkAAZ0BcQGYBLsDcQF3ArsBdwGYAbsB
+        dwZxAZ0EuwGdAXEB9DEAAbwBBxr/AfABBwH0CQAB8wH0CvIB8wX0CvIB8wL0CQABnQFxAZgEuwJxAXcB
+        uwGYAXcCcQGYAbsBnQVxAXcEuwGdAXEB9DEAAbwBBxr/AfABBwH0CQAB8wH0CvIH9AnyAfMC9AkAAZ0B
+        cQGYBLsDcQF3BXEBnQG7AZ0EcQF3BLsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9AjyAfMJ9AjyAfMC
+        9AkAAZ0BcQGYBLsBdwlxAXcCuwF3AnEBmAS7AZ0BcQH0MQABvAEHGv8B8AEHAfQJAAHzAfQH8gX0AvIB
+        8wT0AfMG8gHzAvQJAAGdAXEBmAS7AZgKcQF3ApgBcQF3BbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB
+        9AfyBPQE8gHzBPQG8gHzAvQJAAGdAXEBmAW7AZ0NcQGYBbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB
+        9AjyAvQH8gH0AfMH8gHzAvQJAAGdAXEBmAa7AZ0KcQF3AZgGuwGdAXEB9DEAAbwBBxr/AfABBwH0CQAB
+        8wH0GvIB8wL0CQABnQFxAZgHuwGYAXcHcQGdCLsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC
+        9AkAAZ0BcQGYGbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYGbsBnQFxAfQx
+        AAG8AQca/wHwAQcB9AkAAfMB9BryAfMC9AkAAZ0BcQGYGbsBnQFxAfQxAAG8AQca/wHwAQcB9AkAAfMB
+        9BryAfMC9AkAAZ0BcQGYGbsBlgFxAfQxAAHyAQcB8Rn/AgcB/wkAAvQB8xnyAvQB/wkAAQgBcQGdGbsB
+        dwFxAf8xAAH/HAcB8goAAf8d9AoAAf8BdxtxAQg0AAH0AfAXvAHxAf8NAAH0GPMB9AH/DQAB9AGYF50B
+        CAH//wBvAAFCAU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA/8BAA//BQAB/gMAAX8B
+        /gMAAX8B/gMAAX8FAAH8AwABHwH8AwABHwH8AwABHwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEPAfgDAAEPAfgDAAEPBQAB+AMAAQ8B
+        +AMAAQ8B+AMAAQ8FAAH4AwABDwH4AwABDwH4AwABDwUAAfgDAAEfAfgDAAEfAfgDAAEfBQAB/gMAAT8B
+        /gMAAT8B/gMAAT8FAA//BQAP/wUACw==
+</value>
+  </data>
 </root>
